--- a/Overlisten/Overlisten.Browser/wwwroot/index.html
+++ b/Overlisten/Overlisten.Browser/wwwroot/index.html
@@ -4,8 +4,34 @@
     <meta charset="utf-8" />
     <title>Overlisten</title>
     <base href="/" />
+
+    <style>
+        progress {
+            color: #d4ccdb;
+            border: 2px solid black;
+        }
+
+            progress::-moz-progress-bar {
+                background: white;
+            }
+
+            progress::-webkit-progress-value {
+                background: gray;
+            }
+
+            progress::-webkit-progress-bar {
+                background: white;
+            }
+    </style>
 </head>
-<body>
+<body style="background-color: #041014;">
+
+    <div style="display: flex; align-items: center; justify-content: center; position: absolute;
+            top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%;">
+        <p style="position: absolute; margin-bottom: 3em; font-size: 6em; color: white">Overlisten</p>
+        <progress id="main-progressBar" style="width: 80em; height: 5.5em; margin-top: 10em;" max="100" value="0"></progress>
+    </div>
+
     <div id="app" style="position:absolute;width:100%;height:100%;left:0;top:0;"></div>
     <div id="opensilver-root" style="position: relative; width: 100%; height: 100%; overflow-x: hidden; overflow-y: hidden"></div>
 
